volexc/tests/ui/parse_missing_map_value.out
Error: found '}' expected 'bool', 'u8', 'u16', 'u32', 'u64', 'i8', 'i16', 'i32', 'i64', 'f32', 'f64', 'string', '[', '{', or type name
   ╭─[ parse_missing_map_value.vol:3:18 ]
   │
 3 │     bar: {string:};
   │                  ┬  
   │                  ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: 'bool', 'u8', 'u16', 'u32', 'u64', 'i8', 'i16', 'i32', 'i64', 'f32', 'f64', 'string', '[', '{', type name
───╯