volexc/tests/ui/parse_missing_map_value.vol
// Missing value type in map
struct Foo {
    bar: {string:};
}
